ci(synthetics): call ephemeral workflow via workflow_call from deploy workflow_run; keep cron/manual as backup (Droid-assisted)

--- a/.github/workflows/post-deploy-synthetics-ephemeral.yml
+++ b/.github/workflows/post-deploy-synthetics-ephemeral.yml
@@ -16,6 +16,13 @@ on:
     types: [post-deploy-synthetics-ephemeral]
   schedule:
     - cron: '*/30 * * * *'
+  workflow_call:
+    inputs:
+      simulate_failure:
+        description: "Simulate a failing run"
+        type: boolean
+        required: false
+        default: false
 
 jobs:
   ping:
