--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,20 @@
-
-# Dependencies and build
-node_modules/
-.next/
-out/
-dist/
-coverage/
-.turbo/
-.cache/
-test-results/
-playwright-report/
-playwright/.cache/
-
-# Env and logs
-.env
-.env.*
-!.env.example
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# OS/Editor
-.DS_Store
-Thumbs.db
-.vscode/
-.idea/
-
-# Local uploads (optional)
-public/uploads/
-uploads/
-
-# Local backup artifacts
-node_modules.bak*/
-tsconfig.tsbuildinfo
+**/node_modules
+.next
+.cache
+.build
+*.nfs*
+**/.yarn/
+!**/.yarn/patches
+!**/.yarn/plugins
+!**/.yarn/releases
+!**/.yarn/sdks
+!**/.yarn/versions
+!**/.yarn/cache
+**/.yarn/build-state.yml
+**/.yarn/install-state.gz
+dist
+target
+out
+.deploy
+.logs
+*.tsbuildinfo
