--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
         "generate:icons": "node scripts/generate-pwa-icons.js",
         "test:pwa": "node scripts/test-pwa.js",
         "build:pwa": "npm run build && npm run test:pwa",
-        "test:e2e": "playwright test --reporter=list",
+        "test:e2e": "playwright test",
+        "test:e2e:headed": "playwright test --headed",
+        "test:e2e:debug": "playwright test --debug",
+        "test:e2e:ui": "playwright test --ui",
+        "test:e2e:report": "playwright show-report",
+        "test:e2e:codegen": "playwright codegen",
         "cron:schedule": "node scripts/run-cron.js --mode schedule",
         "cron:run": "node scripts/run-cron.js",
         "type-check": "tsc -p tsconfig.json --noEmit",
@@ -104,7 +109,7 @@
         "zod": "^3.25.76"
     },
     "devDependencies": {
-        "@playwright/test": "^1.55.0",
+        "@playwright/test": "^1.57.0",
         "@testing-library/jest-dom": "^6.1.4",
         "@testing-library/react": "^14.1.2",
         "@types/bcryptjs": "^2.4.2",
