--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
+        "@types/bcrypt": "^6.0.0",
         "@types/dompurify": "^3.0.5",
         "@types/nodemailer": "^6.4.17",
         "archiver": "^7.0.1",
         "aws-sdk": "^2.1692.0",
         "axios": "^1.6.2",
+        "bcrypt": "^6.0.0",
         "bcryptjs": "^2.4.3",
         "chart.js": "^4.4.0",
         "critters": "^0.0.23",
