--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "@opentelemetry/sdk-node": "0.207.0",
         "@prisma/client": "^6.7.0",
         "@prisma/instrumentation": "^6.18.0",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@sendgrid/mail": "^8.1.5",
         "@sentry/nextjs": "10.21.0",
         "@stripe/react-stripe-js": "^2.4.0",
@@ -106,6 +107,7 @@
         "react-icons": "^4.12.0",
         "react-leaflet": "^4.2.1",
         "react-virtuoso": "4.14.1",
+        "recharts": "^3.5.1",
         "sharp": "^0.33.0",
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
