--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
+        "react-dropzone": "^14.3.8",
         "react-hook-form": "^7.48.2",
         "react-hot-toast": "^2.5.2",
         "react-icons": "^4.12.0",
