--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
         "@types/bcrypt": "^6.0.0",
         "@types/dompurify": "^3.0.5",
         "@types/nodemailer": "^6.4.17",
-        "@types/papaparse": "^5.5.1",
         "archiver": "^7.0.1",
         "aws-sdk": "^2.1692.0",
         "axios": "^1.6.2",
@@ -77,15 +76,18 @@
         "bcryptjs": "^2.4.3",
         "chart.js": "^4.4.0",
         "cloudinary": "^2.8.0",
+        "clsx": "^2.1.1",
         "critters": "^0.0.23",
         "cssnano": "^7.1.0",
         "date-fns": "^2.30.0",
         "dompurify": "^3.3.0",
+        "exceljs": "^4.4.0",
         "express": "^4.18.2",
         "form-data": "^4.0.0",
         "framer-motion": "^12.23.9",
         "ioredis": "^5.7.0",
         "isomorphic-dompurify": "^2.33.0",
+        "jspdf": "^3.0.4",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.561.0",
         "next": "14.0.4",
@@ -116,6 +118,7 @@
         "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2",
         "stripe": "^14.5.0",
+        "tailwind-merge": "^3.4.0",
         "twilio": "^5.8.2",
         "uuid": "^9.0.1",
         "web-push": "^3.6.7",
@@ -129,6 +132,7 @@
         "@types/jest": "^29.5.10",
         "@types/leaflet": "^1.9.20",
         "@types/node": "^20.10.0",
+        "@types/papaparse": "^5.5.1",
         "@types/pdfkit": "^0.13.9",
         "@types/qrcode": "^1.5.5",
         "@types/react": "^18.2.38",
