--- a/.env.example
+++ b/.env.example
@@ -110,3 +110,12 @@ EMAIL_SERVER_PASSWORD=
 # Residents Module
 NEXT_PUBLIC_RESIDENTS_ENABLED=true
 
+# =============================================
+# Cloudinary Configuration (for image/file uploads)
+# =============================================
+CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_API_KEY=your_api_key_here
+CLOUDINARY_API_SECRET=your_api_secret_here
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
+
