--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ NEXTAUTH_SECRET=test-secret-key-for-playwright-tests-only
 ALLOW_DEV_ENDPOINTS=1
 
 # Cloudinary Configuration for File Upload
-CLOUDINARY_CLOUD_NAME=your_cloud_name_here
-CLOUDINARY_API_KEY=your_api_key_here
-CLOUDINARY_API_SECRET=your_api_secret_here
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+CLOUDINARY_CLOUD_NAME=dygtsnu8z
+CLOUDINARY_API_KEY=328392542172231
+CLOUDINARY_API_SECRET=KhpohAEFGsjVKuXRENaBhCoIYFQ
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dygtsnu8z
+CLOUDINARY_URL=cloudinary://328392542172231:KhpohAEFGsjVKuXRENaBhCoIYFQ@dygtsnu8z
