--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
         "autoprefixer": "^10.4.16",
+        "canvas": "^3.2.0",
         "concurrently": "^8.2.2",
         "cross-env": "^7.0.3",
         "eslint": "^8.54.0",
