--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
         "next-themes": "^0.4.6",
         "node-fetch": "^3.3.2",
         "nodemailer": "^6.10.1",
+        "openai": "^6.13.0",
         "otplib": "^12.0.1",
         "papaparse": "^5.5.3",
         "pdfkit": "0.17.2",
