--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
         "cron:schedule": "node scripts/run-cron.js --mode schedule",
         "cron:run": "node scripts/run-cron.js",
         "type-check": "tsc -p tsconfig.json --noEmit",
-        "migrate:deploy": "prisma migrate deploy",
+        "migrate:deploy": "bash scripts/resolve-failed-migration-20251218.sh && prisma migrate deploy",
         "migrate:resolve": "bash scripts/resolve-failed-migration.sh",
+        "migrate:resolve-20251218": "bash scripts/resolve-failed-migration-20251218.sh",
         "migrate:resolve-manual": "prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields && prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields.failed_backup"
     },
     "prisma": {
